--- a/sass/_icons.scss
+++ b/sass/_icons.scss
@@ -3,6 +3,13 @@
   mask-image: url($svgPath);
 }
 
+span {
+  &.icon {
+    position: relative;
+    top: -2px;
+  }
+}
+
 .bm-icon {
   width: 100%;
   height: 100%;
