--- a/sass/elements/_buttons.scss
+++ b/sass/elements/_buttons.scss
@@ -13,6 +13,24 @@ Types of buttons:
 
 ```types.html
 <button class="button rectanglePrimary">Rectangle Primary</button>
+<button class="button rectanglePrimary">
+  <span class="icon">
+    <i class="bm-icon-placeholder"></i>
+  </span>
+  <span>Rectangle Primary</span>
+</button>
+<button class="button rectanglePrimary">
+  <span class="is-left">Rectangle Primary</span>
+  <span class="icon">
+    <i class="bm-icon-arrow-right"></i>
+  </span>
+</button>
+<button class="button rectanglePrimary content-space-between">
+  <span>Rectangle Primary</span>
+  <span class="icon">
+    <i class="bm-icon-arrow-right"></i>
+  </span>
+</button>
 <button class="button rectanglePrimary mediumLabel">Rectangle Primary - medium button</button>
 <button class="button rectanglePrimary smallLabel">Rectangle Primary - small button</button>
 <button class="button rectangleSecondary">Rectangle Secondary</button>
@@ -50,13 +68,8 @@ a {
 
   height: 56px;
 
-  span {
-    //text-align: center;
-    //vertical-align: middle;
-    //position: absolute;
-    //top: 50%;
-    //left: 50%;
-    //transform: translate(-50%, -50%);
+  &.content-space-between {
+    justify-content: space-between;
   }
 
   /**
